--- a/NUS-ISS/WebDevelopment/Lesson_08/assignment/index.html
+++ b/NUS-ISS/WebDevelopment/Lesson_08/assignment/index.html
@@ -1,158 +1,153 @@
 <!DOCTYPE html>
 <html>
-    <title>
-<head>Assignment</head>
-</title>
-<style>
-* {box-sizing: border-box;}
 
-body { 
-  margin: 0;
-}
-
-.header {
-  overflow: hidden;
-  background-color: #f1f1f1;
-  padding: 20px 10px;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  
-}
-
-table.nav {
-  overflow: hidden;
-  background-color:antiquewhite;
-  padding: 5px 10px;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  
-}
-
-td.nav{
-  width: 25%;
-}
-
-.header a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px; 
-  line-height: 25px;
-  border-radius: 4px;
-}
-
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.header a.active {
-  background-color: dodgerblue;
-  color: white;
-}
-
-.header-right {
-  float: right;
-}
-
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .header-right {
-    float: none;
-  }
-}
-
-table.cart{
-
-  overflow: hidden;
-  border: 1px solid black;
-  padding: 5px 10px;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  border-collapse: collapse;
-}
-
-th.cart{
-  border: 1px solid black;
-  padding: 10px;
-  width: 18px;
-}
-h2.cart{
-  text-align: center;
-}
-.count{
-  width: 30%;
-}
-</style>
+<head>
+  <title>Assignmnet 8</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<div class="header">
-  <a href="#default" class="logo">CompanyName</a>
-  <div class="header-right">
-    <a href="#login">Log In</a>
-    <a href="#singup">Sign Up</a>
+  <div class="header">
+    <a href="#default" class="logo">CompanyLogo</a>
+    <div class="header-right">
+      <a href="#login">Log In</a>
+      <a href="#singup">Sign Up</a>
+    </div>
   </div>
-</div>
-<table class="nav">
-  <tr>
-    <td class="nav">Phone</td>
-    <td class="nav">Computer</td>
-    <td class="nav">Gaming peraphral</td>
-    <td class="nav">Phone Accessorial</td>
-   
-  </tr>
-</table>
-<br>
-<h2 class="cart">CART</h2>
-<table class="cart">
-  <tr>
-    <th class="cart">image</th>
-    <th class="cart">product</th>
-    <th class="cart">price</th>
-    <th class="cart">quantity</th>
-    <th class="cart">total</th>
-    <th class="cart">remove</th>
-  </tr>
-  <tr>
-    <td class="cart"><img src="photo1.png" alt="" width="150px" height="100px"></td>
-    <td class="cart">Samsung Galaxy Flip 3</td>
-    <td class="cart">$165</td>
-    <td class="cart"><input type="number" class="count"></td>
-    <td class="cart">h</td>
-    <td class="cart"><button>x</button></td>
-  </tr>
-  <tr>
-    <td class="cart"><img src="photo2.png" alt="" width="150px" height="100px"></td>
-    <td class="cart">Samsung Galaxy Flip 3 cover</td>
-    <td class="cart">$35</td>
-    <td class="cart"><input type="number" class="count" id="count"></td>
-    <td class="cart"><p id="totalPirce"></p></td>
-    <td class="cart"><button>x</button></td>
-  </tr>
-</table>
+  <table class="nav">
+    <tr>
+      <td class="nav">Phone</td>
+      <td class="nav">Computer</td>
+      <td class="nav">Gaming peraphral</td>
+      <td class="nav">Phone Accessorial</td>
+
+    </tr>
+  </table>
+  <br>
+  <h2 class="cart">CART</h2>
+  <table class="cart">
+    <tr>
+      <th class="cart">image</th>
+      <th class="cart">product</th>
+      <th class="cart">price</th>
+      <th class="cart">quantity</th>
+      <th class="cart">total</th>
+      <th class="cart">remove</th>
+    </tr>
+    <tr id="first">
+      <td class="first"><img src="photo.png" alt="" width="150px" height="100px"></td>
+      <td class="first">Samsung Galaxy Flip 3</td>
+      <td class="first">$799</td>
+      <td class="first"><input type="number" class="count" id="count1" value="1"></td>
+      <td class="first" id="cart-price-one"></td>
+      <td class="first"><button onclick="toRemoveItemA()">x</button></td>
+    </tr>
+    <tr id="second">
+      <td class="second"><img src="photo2.png" alt="" width="150px" height="100px"></td>
+      <td class="second">Samsung Galaxy Flip 3 cover</td>
+      <td class="second">$35</td>
+      <td class="second"><input type="number" class="count" id="count2" value="1"></td>
+      <td class="second" id="cart-price-two"></td>
+      <td class="second"><button onclick="toRemoveItemB()">x</button></td>
+    </tr>
+
+  </table>
+  <table>
+    <tr style="height: 10px;">
+      <td></td>
+    </tr>
+  </table>
+
+  <table class="totalPrice">
+    <tr>
+      <td><button class="two" onclick="updateCart()">Update Cart</button><button class="two"
+          onclick="updateCart()">Continue Shopping</button></td>
+
+      <td>
+        <h2 style="padding-right:10px;">CART TOTAL</h2>
+      </td>
+
+    </tr>
+
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+
+    <tr>
+      <td></td>
+
+      <td>
+        <span style="text-align:left;font-size: 24px;">SubTotal: </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <span class="spanOne" id="spanOne"></span>
+      </td>
+
+    </tr>
+
+    <tr style="height: 10px;">
+      <td></td>
+      <td></td>
+    </tr>
+
+    <tr>
+      <td></td>
+
+      <td>
+        <span style="text-align:left;font-size: 24px;">Shipping: </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <span class="spanOne">Free</span>
+      </td>
+
+    </tr>
+
+    <tr style="height: 10px;">
+      <td></td>
+      <td></td>
+    </tr>
+
+    <tr>
+      <td></td>
+
+      <td>
+        <span style="text-align:left;font-size: 24px;">TOTAL: </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+        <span class="spanOne" id="spanTwo"></span>
+      </td>
+
+    </tr>
+    <tr style="height: 15px;">
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td><button class="two" onclick="updateCart()" style="float:right;">Proceed Checkout</button></td>
+
+    </tr>
+    <tr style="height: 15px;">
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+
+  <table class="footer">
+
+    <tr>
+      <td colspan="2" class="tf">Copyright@2022 NUS_ISS <br><br>
+        <a href="" class="footer">Legal Stuff</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="" class="footer">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="" class="footer">Security</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      </td>
+    </tr>
+
+
+  </table>
+
+  </table>
+
 
 </body>
-<script>
-    price = document.getElementById(count).val;
-    totalPrice = price * 166;
-    document.getElementById(totalPrice) = totalPrice;
-</script>
+
+<script src="script.js"></script>
+
 </html>
